--- a/src/app/module/home/user-transaction/mortgage-summary/mortgage-summary.component.html
+++ b/src/app/module/home/user-transaction/mortgage-summary/mortgage-summary.component.html
@@ -4,9 +4,9 @@
         <div class="col-12">
             <div class="row">
                 <div class="col-12 my-4">
-                    <h2>Savings Account Summary</h2>
+                    <h2>Mortgage Account Summary</h2>
                 </div>
-                <div class="col-6">
+                <!-- <div class="col-6">
                     <p><b>User Name:</b><span> {{userName}}</span></p>
                 </div>
                 <div class="col-6 text-right">
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-6 text-right">
                     <p><b>Available Balance:</b><span> {{accountBalance?.accountBalance}}.00</span></p>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="col-12">
@@ -48,17 +48,21 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <p><small><b>Account Number:</b></small></p>
                             <h5>{{transaction?.payeeAccountNumber}}</h5>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <p><small><b>Description:</b></small></p>
                             <h5>{{transaction?.remarks}}</h5>
                         </div>
-                        <div class="col-md-4 ml-auto float-lg-right text-right">
+                        <div class="col-md-3 ml-auto float-lg-right text-right">
                             <p><small><b>Transaction Amount:</b></small></p>
                             <h5>INR {{transaction?.transactionAmount}}</h5>
+                        </div>
+                        <div class="col-md-3 ml-auto float-lg-right text-right">
+                            <p><small><b>Balance Amount:</b></small></p>
+                            <h5>INR {{transaction?.balanceAmount}}</h5>
                         </div>
                     </div>
                 </div>
