--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg d-none navbar-light" [ngClass]="{'bg-white shadow d-flex': suserDetails}">
-    <a class="navbar-brand" href="#">My App</a>
+<nav class="navbar navbar-expand-lg bg-white shadow d-flex navbar-light" *ngIf="suserDetails">
+    <a class="navbar-brand" href="#">People Bank</a>
     <button class="navbar-toggler" type="button" (click)="toggleNavbar()" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -8,53 +8,41 @@
 
     <div class="collapse navbar-collapse" [ngClass]="{'show': showMobileMenu}" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#"><i class="fa fa-home" aria-hidden="true"></i>Home <span
-                        class="sr-only">(current)</span></a>
+            <li class="nav-item" [routerLinkActive]="'active'" *ngIf="suserDetails.userName !== 'admin'">
+                <a class="nav-link" [routerLink]="['/home']" href="#"><i class="fa fa-home"
+                        aria-hidden="true"></i>Account
+                    Summary
+                    <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" [routerLinkActive]="'active'" *ngIf="suserDetails.userName !== 'admin'">
+                <a class="nav-link" [routerLink]="['/home/mortage-summary']" href="#">Mortgage Summary
+                    <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item" [routerLinkActive]="'active'" *ngIf="suserDetails.userName !== 'admin'">
+                <a class="nav-link" [routerLink]="['/home/fund-transfer']" href="javascript:void(0)">Fund Transfer</a>
+            </li>
+            <!-- user-transaction -->
+            <li class="nav-item" [routerLinkActive]="'active'" *ngIf="suserDetails.userName !== 'admin'">
+                <a class="nav-link" [routerLink]="['/home/user-transaction']" href="javascript:void(0)">View my
+                    transactions</a>
+            </li>
+            <!--  <li class="nav-item">
                 <a class="nav-link" href="#"> <i class="fa fa-bell-o" aria-hidden="true"></i><span
                         class="rounded-circle alerts"><span class="numberofalerts">2</span></span>Alerts</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)" (click)="op.toggle($event)"> <i
                         class="fa fa-user-circle fa-2" aria-hidden="true"></i>Profile</a>
             </li>
-
         </ul>
-
     </div>
-
-
-
 </nav>
 <p-overlayPanel #op>
 
     <a class="dropdown-item" href="javascript:void()">You Signed in as</a>
-    <a class="dropdown-item" href="javascript:void()"><b>{{suserDetails?.username}}</b></a>
+    <a class="dropdown-item" href="javascript:void()"><b>{{suserDetails?.userName}}</b></a>
 
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="javascript:void(0)" (click)="logOut()">LogOut</a>
 
 </p-overlayPanel>
-
-<nav [ngClass]="{'bg-dark shadow d-lg-block ': suserDetails}"
-    class="secoundary-bar navbar navbar-expand-lg d-none navbar-light text-white">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center order-2" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0)">Test1</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0)">Test2</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0)">Test3</a>
-            </li>
-        </ul>
-    </div>
-</nav>
