--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="footer row  justify-content-center text-center  bg-dark text-white">
                 <div class="col">
 
-                    <span> <i class="fa fa-copyright" aria-hidden="true"></i>All Rights reserved by Retail Bank</span>
+                    <span> <i class="fa fa-copyright" aria-hidden="true"></i>Powered by Rich Bank</span>
                 </div>
             </div>
         </div>
